--- a/buildspec.yml
+++ b/buildspec.yml
@@ -28,8 +28,8 @@ phases:
       - mvn clean install
       - echo Logging in to Amazon ECR...
       - aws --version
-      - REPOSITORY_URI=public.ecr.aws/b9j1b0l5/kiran761
-      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin $REPOSITORY_URI
+      - REPOSITORY_URI=public.ecr.aws/b9j1b0l5
+      - aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin  $REPOSITORY_URI
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
   build:
